# stac_ipyleaflet

./: .gitignore  CONTRIBUTING.rst  HISTORY.rst  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  biomass-layers.csv  demo.ipynb  environment.yml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  tox.ini  write_biomass_layers.py
.devcontainer/: Dockerfile  devcontainer.json
.github/: ISSUE_TEMPLATE.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: feature_request.md
docs/: Makefile  READEME.md  README.md  conf.py  index.rst  installation.rst  make.bat  usage.rst
docs/sample_notebooks/: visualize-geodataframe.ipynb  visualize-geojson.ipynb  visualize-mosaic.ipynb  visualize-raster.ipynb  visualize-wms.ipynb
maap_ipyleaflet/: __init__.py
stac_ipyleaflet/: __init__.py  base_widget.py  constants.py  core.py
stac_ipyleaflet/biomass_layers/: biomass_widget.py  histograms.py
stac_ipyleaflet/stac_discovery/: requests.py  stac.py  stac_widget.py  types.py
stac_ipyleaflet/stac_discovery/catalogs/: nasa_maap_stac.json  nasa_maap_stac.py  nasa_maap_stac.tsv
stac_ipyleaflet/utilities/: helpers.py
stac_ipyleaflet/utilities/data/: biomass-layers.csv
stac_ipyleaflet/widgets/: basemaps.py  draw.py  inspect.py
tests/: __init__.py  test_core.py  test_maap_ipyleaflet.py
