[metadata]
name = stac_ipyleaflet
version=0.1.0
author = Aimee Barciauskas
description=ipyleaflet customized for discovering, visualizing and interacting with STAC and workspace data.
long_description = file: README.md
url = https://github.com/abarciauskas-bgse/stac_ipyleaflet
keywords = stac_ipyleaflet
author_email=aimee@developmentseed.org
license=MIT license
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[bumpversion]
current_version = 0.1.0
commit = True
tag = True

[bumpversion:file:setup.py]
search = version='{current_version}'
replace = version='{new_version}'

[bumpversion:file:stac_ipyleaflet/__init__.py]
search = __version__ = '{current_version}'
replace = __version__ = '{new_version}'

[bdist_wheel]
universal = 1

[flake8]
exclude = docs
[tool:pytest]
collect_ignore = ['setup.py']

[options]
packages = find:
include_package_data=True
zip_safe=False
tests_require=[pytest>=3]
install_requires =
    ipyleaflet==0.17.2
    ipywidgets==8.0.4
    ipyevents
    matplotlib
    pydantic
    shapely
    rasterio
    requests
    rio_tiler
    rioxarray
    xarray
    pystac_client==0.6.1

[options.extras_require]
test = 
    pytest

[options.packages.find]
where = stac_ipyleaflet

